--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,17 @@
     margin-bottom: 25px;
 }
 
-.score{}
+.score{
+    position: relative;
+    width: 200px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    background-color: #004f6e;
+    color:rgb(255, 255, 255);
+    border-radius: 10px 0 10px 0;
+    padding: 25px 25px;
+    text-align: center;
+}
 
 @keyframes pipe-animation {
     from {
